# TechStorm-Rivalry

./: .cproject  .gitignore  .project  Affectable.h  Affliction.h  AfflictionAffect.h  AfflictionManager.cpp  AfflictionManager.h  Block.h  BodySlot.h  Button.h  CMakeLists.txt  CMakeOptions.txt  CelestialBody.h  Character.h  Common.h  Commonly used Locations  Configman.h  CraftingRecipe.h  Doxyfile  EAfflictions.h  EEquipSlotTypes.h  EEquipmentTypes.h  EFaction.h  EFactionRelationship.h  EWeaponDamageTypes.h  EWeaponType.h  EquipSlot.h  EquipmentMan.cpp  EquipmentMan.h  Equippable.cpp  GUI.h  Game.h  Gameobject.h  Globals.cpp  Globals.h  ICharacter.h  ICharacterHand.h  ICharacterHealth.h  IEquippable.h  (+52 more)
Classes/: Animatable.h  Block.h  Console.h  Flashlight.h  GUtils.h  Game.h  Gameobj.h  Globals.h  Gun.h  HeightMap.h  Logman.h  MarchingCubes.h  Menu.cpp  Menu.h  MenuCamera.cpp  MenuCamera.h  Metal_Block.cpp  Metal_Block.h  MiniMan.h  Monitor.h  Monobehavior.h  PhysObj.cpp  PhysObj.h  Sewingneedle.h  SimpleGameObj.cpp  SimpleGameObj.h  Sky.h  Skybox.cpp  Skybox.h  Sun.cpp  Sun.h  TerrainTriangle.h  TestPlane.h  Window.h
Config/: Engine.toml  Game.toml  Settings.ini  options.toml
Data/: publishReqs.xml
Debug/: vc143.idb
Documentation/: Functions.txt
Engine/: Math.h
Old/: CMakeLists.txt  CMakeOptions.txt  Common.h  LICENSE  Main.cpp  Makefile  README.md  a.txt  build-windows.bat  main.cpp  raygui.h  run.sh
Old/.github/workflows/: codeql.yml
Old/Classes/: Animatable.h  Block.h  Build.h  Button.h  Console.cpp  Console.h  FxMan.cpp  FxMan.h  Gameobj.cpp  Gameobj.h  Globals.h  Graveyard.txt  Gun.cpp  Metal_Block.h  Registry.cpp  Registry.h  Sky.cpp  Triangle.h
Old/Classes/ConfigReader/: ConfigReader.hpp
Old/Classes/Core/: FileMan.hpp  Game.cpp  Main.hpp
Old/Classes/Debug/: Debug.hpp  Gizmo.hpp  gizmo.cpp
Old/Classes/GUIs/: GUI.h
Old/Classes/Graphics/: GameShader.cpp  GameShader.hpp
Old/Classes/Graphics/Shaders/: ReflectionShader.hpp
Old/Classes/Lists/: ShaderList.hpp
Old/Classes/Player/: CameraComp.h  CameraData.h  Player.h
Old/Classes/Screens/: MainMenu.cpp  MainMenu.hpp  Menu.h  MenuCamera.cpp  MenuCamera.h
Old/Classes/Vehicles/: Plane.h
Old/Classes/World/: Skybox.h  Sun.hpp  a.h
Old/Classes/World/Lights/: LightDirectionalComponent.hpp  LightGizmoComponent.hpp  LightPointComponent.cpp  LightPointComponent.hpp
Old/Classes/lib/: MeshGen.h  raylib.h
Old/Classes/lib/Buttons/src/: ButtonO.cpp  ButtonP.cpp  ButtonR.h  MenuR.cpp
Old/Engine/Classes/: Component.h
Old/Engine/Classes/ConfigMan/: ConfigMan.h  ConfigTypeConverter.h
Old/Engine/Classes/Depreciated/: GameObj2D.cpp  GameObj2D.h  Shaderpool.h  TerrainTriangle.h  Textures.h
Old/Engine/Classes/Env/Light/: Light.h
Old/Engine/Classes/Env/Shadow/: ShadowMap.h
Old/Engine/Classes/FxMan/: fxMan.h
Old/Engine/Classes/GUIs/: Gui.h
Old/Engine/Classes/GUIs/Core/: MenuCamera.cpp
Old/Engine/Classes/GameObject/: Object.h
Old/Engine/Classes/Graphics/: ObjectMaterial.h
Old/Engine/Classes/Physics/: Friction.h  Velocity.h
Old/Engine/Classes/Player/: CameraComp.h  CameraData.h  Player.h  PlayerHealthBar.h
Old/Engine/Classes/Project/Game/Components/: GameWindowFactory.h
Old/Engine/DataSets/: DisplayResolutions.h  Euler.h  RenderableObject.h  ThreadTypes.h
Old/Minero/: gui_Options.h
Old/Minero/Classes/Item/: Item.h
Old/Minero/Classes/Vehicles/: Vehicle.h
Old/Minero/Classes/lib/: rcamera.h  rlights.h
Old/Minero/Classes/lib/Buttons/: LICENSE
Old/Minero/Classes/lib/RaylibErosionStandalone-main/raylib/src/: .cproject
Old/Minero/Classes/lib/glm/: .cproject
Old/Minero/Classes/lib/glm/glm/: .cproject
Old/Minero/Classes/lib/glm/test/cmake/: .cproject  .project
Old/Minero/Classes/lib/glm/test/core/: .project
Old/Minero/Classes/lib/glm/test/ext/: .cproject  .project
Old/Minero/Classes/lib/glm/test/gtc/: .project
Old/Minero/Classes/lib/glm/test/gtx/: .project
Old/Minero/Classes/lib/glm/test/perf/: .project
Old/Minero/Classes/lib/raylib/src/: .cproject
Old/lib/: ErosionMaker.cpp  Typeget.c  Typeget.h  xutility
Old/lib/Buttons/src/: ButtonR.cpp  ButtonR.h  MenuR.hpp
Old/lib/RaylibErosionStandalone-main/raylib/src/: .project
Old/lib/RaylibErosionStandalone-main/src/: Main.cpp  core_basic_window_cpp.vcxproj  rlights.h
Old/lib/RaylibErosionStandalone-main/src/resources/shaders/: cirrostratus.vert  cubemap.frag  vegetation.vert
Old/lib/References/RaylibErosionStandalone-main/raylib/src/: .project
Old/lib/References/RaylibErosionStandalone-main/src/resources/shaders/: water.vert
Old/lib/References/raylib-simple-lighting/rlSimpleLight/: Makefile
Old/lib/glm/: .cproject  .project
Old/lib/glm/glm/: .cproject  .project
Old/lib/glm/test/bug/: .cproject  .project
Old/lib/glm/test/cmake/: .cproject  .project
Old/lib/glm/test/core/: .cproject  .project
Old/lib/glm/test/ext/: .cproject  .project
Old/lib/glm/test/gtc/: .cproject  .project
Old/lib/glm/test/gtx/: .cproject  .project
Old/lib/glm/test/perf/: .cproject  .project
Old/lib/raylib/src/: .cproject  .project
Old/lib/rlODE-Template/Resources/: cylinder.blend  cylinder.blend1  ground.blend  ground.blend1
Old/lib/rlODE-Template/include/: raylibODE.h
Old/lib/rlODE-Template/src/: raylibODE.c
Old/lib/tomlplusplus-3.3.0/tomlplusplus-3.3.0/examples/: .cproject
Old/lib/tomlplusplus-3.3.0/tomlplusplus-3.3.0/include/: .cproject
Old/lib/tomlplusplus-3.3.0/tomlplusplus-3.3.0/src/: .project
Old/lib/tomlplusplus-3.3.0/tomlplusplus-3.3.0/tests/: .cproject  .project
Old/lib/tomlplusplus-3.3.0/tomlplusplus-3.3.0/toml-test/: .cproject  .project
Old/resources/: vegetation.frag
Old/resources/models/: Bad_Gun.mtl
chrono_build/: ALL_BUILD.vcxproj  CMakeCache.txt  COPY_DLLS.vcxproj  COPY_DLLS.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  my_demo.vcxproj  my_demo.vcxproj.filters  my_project.sln
engine/: engine.cpp  engine.h
lib/: ErosionMaker.h  rcamera.h  rlgl.h  rlights.h  rtextures.c
resources/: cubemap.fs  lighting.fs  skybox.vs  textures.csv
(+94374 files in other folders)
